--- a/H4_Group_12/app/src/main/res/layout/activity_main.xml
+++ b/H4_Group_12/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_above="@+id/windSpeed"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="false" />
 
     <TextView
         android:layout_width="wrap_content"
