--- a/TeamProject/app/src/main/res/layout/activity_map.xml
+++ b/TeamProject/app/src/main/res/layout/activity_map.xml
@@ -3,14 +3,15 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.victor.teamproject.MapActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Northside 2016"
-        android:id="@+id/northsideView"
-        android:layout_alignParentTop="true"
+        android:text="Map!!"
+        android:id="@+id/mapView"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
