--- a/TeamProject/app/src/main/res/menu/menu_map.xml
+++ b/TeamProject/app/src/main/res/menu/menu_map.xml
@@ -13,28 +13,23 @@
             <item
                 android:id="@+id/menu_home"
                 android:icon="@mipmap/home"
-                android:title="@string/home"
-                android:onClick="btnHome"/>
+                android:title="@string/home"/>
             <item
                 android:id="@+id/menu_artist"
                 android:icon="@mipmap/artist"
-                android:title="@string/artist"
-                android:onClick="btnArtist"/>
+                android:title="@string/artist"/>
             <item
                 android:id="@+id/menu_map"
                 android:icon="@mipmap/map"
-                android:title="@string/map"
-                android:onClick="btnMap"/>
+                android:title="@string/map"/>
             <item
                 android:id="@+id/menu_calender"
                 android:icon="@mipmap/calender"
-                android:title="@string/calender"
-                android:onClick="btnCalender"/>
+                android:title="@string/calender"/>
             <item
                 android:id="@+id/menu_info"
                 android:icon="@mipmap/info"
-                android:title="@string/info"
-                android:onClick="btnInfo"/>
+                android:title="@string/info"/>
         </menu>
     </item>
 </menu>
