--- a/TeamProject/app/src/main/res/layout/activity_main.xml
+++ b/TeamProject/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="C"
+        android:text="°C"
         android:id="@+id/celsiusView"
         android:layout_alignTop="@+id/tempValue"
         android:layout_alignParentRight="true"
@@ -50,7 +50,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UnUpdate"
+        android:text="@string/btnUpdate"
         android:id="@+id/btnUpdate"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
