--- a/TeamProject/app/src/main/res/layout/activity_artist.xml
+++ b/TeamProject/app/src/main/res/layout/activity_artist.xml
@@ -6,13 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.victor.teamproject.ArtistActivity">
 
-    <TextView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Artist!!"
-        android:id="@+id/artistView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
+        android:id="@+id/ArtistOverview"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
