--- a/TeamProject/app/src/main/res/layout/activity_calender.xml
+++ b/TeamProject/app/src/main/res/layout/activity_calender.xml
@@ -1,27 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.example.victor.teamproject.CalenderActivity">
 
-    <TextView
-        android:id="@+id/Calender"
-        android:layout_width="wrap_content"
+    <com.example.victor.teamproject.SlidingTabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Calender"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:elevation="2dp"
+        android:background="@color/ColorPrimary"/>
 
-    <ListView
-        android:id="@+id/Days"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/Calender"></ListView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        />
 
-
-</RelativeLayout>
+</LinearLayout>
 
