--- a/TeamProject/app/src/main/res/values/colors.xml
+++ b/TeamProject/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="ColorPrimary">#00897B</color>
     <color name="ColorPrimaryDark">#00695C</color>
-    <color name="tabsScrollColor">#004D40</color>
+    <color name="tabsScrollColor">#FFFFFF</color>
+    <color name="ColorBlack">#000000</color>
 
 </resources>
