--- a/TeamProject/app/src/main/res/layout/activity_artist.xml
+++ b/TeamProject/app/src/main/res/layout/activity_artist.xml
@@ -4,13 +4,32 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.victor.teamproject.ArtistActivity">
+    tools:context="com.example.victor.teamproject.ArtistActivity" tools:ignore="MergeRootFrame">
 
-    <ListView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ArtistOverview"
+        android:name="com.example.victor.teamproject.ArtistListFragment"
+        android:id="@+id/artistListFragment"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        class="com.example.victor.teamproject.ArtistListFragment"
+        tools:layout="@layout/artistlist" />
+
+    <fragment
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.example.victor.teamproject.ArtistFragment"
+        android:id="@+id/artistFragment"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        tools:layout="@layout/artist" />
 </RelativeLayout>
