--- a/TeamProject/app/src/main/res/layout/artist.xml
+++ b/TeamProject/app/src/main/res/layout/artist.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
