--- a/TeamProject/app/src/main/res/layout/artistlist.xml
+++ b/TeamProject/app/src/main/res/layout/artistlist.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:stackFromBottom="true"
         android:id="@+id/listView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
