--- a/TeamProject/app/src/main/res/layout/artist.xml
+++ b/TeamProject/app/src/main/res/layout/artist.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -75,3 +79,4 @@
 
 </RelativeLayout>
 </ScrollView>
+</RelativeLayout>
