Added background - not finished with info activity. Doing fragments insted

--- a/TeamProject/app/src/main/res/layout/activity_maps.xml
+++ b/TeamProject/app/src/main/res/layout/activity_maps.xml
@@ -1,89 +1,94 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-android:layout_height="match_parent"  tools:context="com.example.victor.teamproject.MapsActivity"
-android:orientation="vertical"
-android:weightSum="1"
-android:background="#2a2a2a"
-    android:onClick="nearestInfo">
-
-<fragment android:layout_width="match_parent"
-    android:layout_height="224dp" android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_weight="0.97" />
-
-<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <Button
-        android:layout_width="122dp"
-        android:layout_height="wrap_content"
-        android:text="Locate Me"
-        android:id="@+id/btnMe"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.11"
-        android:onClick="LocateMe" />
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:background="#2a2a2a"
+    android:onClick="nearestInfo"
+    android:orientation="vertical"
+    android:weightSum="1"
+    tools:context="com.example.victor.teamproject.MapsActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="224dp"
+        android:layout_weight="0.97" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnMe"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.11"
+            android:onClick="LocateMe"
+            android:text="Locate Me" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="Find Info"
-        android:id="@+id/btnInfo"
-        android:layout_weight="1"
-        android:onClick="findInfo" />
+        <Button
+            android:id="@+id/btnInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:onClick="findInfo"
+            android:text="Find Info" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="Find food"
-        android:id="@+id/btnFood"
-        android:layout_weight="1"
-        android:onClick="findFood" />
+        <Button
+            android:id="@+id/btnFood"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:onClick="findFood"
+            android:text="Find food" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="Find Toilets"
-        android:id="@+id/btnFindToilets"
-        android:layout_weight="0.71"
-        android:onClick="findToilets" />
-</LinearLayout>
+        <Button
+            android:id="@+id/btnFindToilets"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_weight="0.71"
+            android:onClick="findToilets"
+            android:text="Find Toilets" />
+    </LinearLayout>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="89dp"
-        android:text="Nearest Info"
-        android:id="@+id/button2"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.21"
-        android:onClick="nearestInfo" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="89dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.21"
+            android:onClick="nearestInfo"
+            android:text="Nearest Info" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Nearest Restaurant"
-        android:id="@+id/button3"
-        android:layout_gravity="right"
-        android:layout_weight="0.21"
-        android:onClick="nearestRestaurant" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_weight="0.21"
+            android:onClick="nearestRestaurant"
+            android:text="Nearest Restaurant" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Nearest Toilet"
-        android:id="@+id/button"
-        android:layout_weight="0.21"
-        android:onClick="nearestToilet" />
-</LinearLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.21"
+            android:onClick="nearestToilet"
+            android:text="Nearest Toilet" />
+    </LinearLayout>
 
 
 </LinearLayout>
