--- a/TeamProject/app/src/main/res/layout/activity_artist.xml
+++ b/TeamProject/app/src/main/res/layout/activity_artist.xml
@@ -1,35 +1,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.victor.teamproject.ArtistActivity" tools:ignore="MergeRootFrame">
+    android:background="@drawable/festival_logo"
+    tools:context="com.example.victor.teamproject.ArtistActivity"
+    tools:ignore="MergeRootFrame">
 
     <fragment
+        android:id="@+id/artistListFragment"
+        android:name="com.example.victor.teamproject.ArtistListFragment"
+        class="com.example.victor.teamproject.ArtistListFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.example.victor.teamproject.ArtistListFragment"
-        android:id="@+id/artistListFragment"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        class="com.example.victor.teamproject.ArtistListFragment"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         tools:layout="@layout/artistlist" />
 
     <fragment
+        android:id="@+id/artistFragment"
+        android:name="com.example.victor.teamproject.ArtistFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.example.victor.teamproject.ArtistFragment"
-        android:id="@+id/artistFragment"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         tools:layout="@layout/artist" />
 </RelativeLayout>
