--- a/TeamProject/app/src/main/res/layout/activity_calender.xml
+++ b/TeamProject/app/src/main/res/layout/activity_calender.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/festival_logo"
     tools:context="com.example.victor.teamproject.CalenderActivity">
 
     <com.example.victor.teamproject.SlidingTabLayout
