--- a/TeamProject/app/src/main/res/values/colors.xml
+++ b/TeamProject/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="ColorPrimaryDark">#00695C</color>
     <color name="tabsScrollColor">#FFFFFF</color>
     <color name="ColorBlack">#000000</color>
+    <color name="ColorBackground">#180DEE</color>
 
 </resources>
