--- a/TeamProject/app/src/main/res/layout/activity_calender.xml
+++ b/TeamProject/app/src/main/res/layout/activity_calender.xml
@@ -2,23 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/festival_logo"
+    android:orientation="vertical"
     tools:context="com.example.victor.teamproject.CalenderActivity">
 
     <com.example.victor.teamproject.SlidingTabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:background="@color/ColorBlack"/>
+        android:background="@color/ColorBlack"
+        android:elevation="2dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
-        android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
 
