--- a/TeamProject/app/src/main/res/layout/activity_info.xml
+++ b/TeamProject/app/src/main/res/layout/activity_info.xml
@@ -3,26 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/festival_logo"
     tools:context="com.example.victor.teamproject.InfoActivity">
 
-    <ListView
-        android:id="@+id/info_list"
+    <com.example.victor.teamproject.SlidingTabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:background="@color/ColorBlack"/>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
-
-
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
