--- a/TeamProject/app/src/main/res/values/colors.xml
+++ b/TeamProject/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="tabsScrollColor">#FFFFFF</color>
     <color name="ColorBlack">#000000</color>
     <color name="ColorBackground">#180DEE</color>
+    <color name="ButtonText">#FFFFFF</color>
+    <color name="ButtonColor">#551A8B</color>
+    <color name="Grey">#545454</color>
 
 </resources>
