--- a/TeamProject/app/src/main/res/values/colors.xml
+++ b/TeamProject/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="ButtonText">#FFFFFF</color>
     <color name="ButtonColor">#551A8B</color>
     <color name="Grey">#545454</color>
+    <color name="Orange">#FF8C00</color>
 
 </resources>
