--- a/TeamProject/app/src/main/res/layout/multiplane_artist.xml
+++ b/TeamProject/app/src/main/res/layout/multiplane_artist.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:id="@+id/list_container"
         android:layout_weight="1"
-        android:background="@android:color/holo_green_dark"
+        android:background="@color/Orange"
         android:layout_height="fill_parent">
     </LinearLayout>
 
