--- a/TeamProject/app/src/main/res/menu/menu_calender.xml
+++ b/TeamProject/app/src/main/res/menu/menu_calender.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.victor.teamproject.CalenderActivity">
+    tools:context="dk.itsmap.e15.grp4.CalenderActivity">
     <item
         android:id="@+id/action_menu"
         android:orderInCategory="100"
