Sidste commit fra min side før aflevering

--- a/TeamProject/app/src/main/res/layout/multiplane_artist.xml
+++ b/TeamProject/app/src/main/res/layout/multiplane_artist.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:id="@+id/list_container"
+        android:id="@+id/list_view"
         android:layout_weight="1"
         android:background="@color/Orange"
         android:layout_height="fill_parent">
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:id="@+id/details_container"
+        android:id="@+id/artist_view"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:visibility="gone"
