--- a/TeamProject/app/src/main/res/layout-land/multiplane_artist.xml
+++ b/TeamProject/app/src/main/res/layout-land/multiplane_artist.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- From FragmentsArnieMovies -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -15,8 +17,7 @@
         android:orientation="horizontal"
         android:id="@+id/artist_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:background="@color/ColorBlack"
+        android:layout_height="fill_parent">
     </LinearLayout>
-
 </LinearLayout>
