--- a/TeamProject/app/src/main/res/layout/activity_info.xml
+++ b/TeamProject/app/src/main/res/layout/activity_info.xml
@@ -4,14 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/festival_logo"
-    tools:context="dk.itsmap.e15.grp4.InfoActivity">
-
-    <dk.itsmap.e15.grp4.SlidingTabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:background="@color/ColorBlack"/>
+    tools:context="dk.itsmap.e15.grp4.InfoActivity.InfoActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
