--- a/TeamProject/app/src/main/res/layout-xlarge/multiplane_artist.xml
+++ b/TeamProject/app/src/main/res/layout-xlarge/multiplane_artist.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- From FragmentsArnieMovies -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:id="@+id/list_container"
-        android:layout_weight="1"
+        android:layout_width="250dp"
+        android:id="@+id/list_view"
         android:background="@color/Orange"
         android:layout_height="fill_parent">
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
-        android:id="@+id/details_container"
-        android:layout_weight="1"
+        android:id="@+id/artist_view"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="wrap_content">
-
+        android:background="@color/ColorBlack"
+        android:layout_height="fill_parent">
     </LinearLayout>
 </LinearLayout>
